--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,8 @@
 <body>
   <img srcset="../images/rocks-300px.jpg 300w,
          ../images/rocks-600px.jpg 600w,
-         ../images/rocks-900px.jpg 900w" sizes="50vw" src="../images/rocks-600px.jpg"
-    alt="red rocks with background light" width="600" height="600">
+         ../images/rocks-900px.jpg 900w" sizes="50vw" src="../images/rocks-600px.jpg" alt="cool red rocks" width="600"
+    height="366">
   <header>
     <nav>
       <ul>
