--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
 
         </article>
-        <svg> viewBox="0 0 100 100"
+        <svg viewBox="0 0 100 100">
             <symbol id="circle" viewBox="0 0 50 50">
                 <circle cx="25" cy="25" r="20" fill="fff0" />
             </symbol>
