--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,9 @@
   <link rel="manifest" href="../images/site.webmanifest">
   <meta name="description" content="This is my personal page of inspiring ideas and my favorite things">
   <title>Contact - Bucket List Inspiration</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Lobster&display=swap" rel="stylesheet">
 </head>
 
 <body>
