--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
         </article>
         <article>
             <h2>The Benefits of Bungee Jumping</h2>
-            <p> 1. Increases adrenaline: Bungee jumping is a high-intensity activity that increases adrenaline levels,
+            <p> 1. Increases adrenaline: Bungee jumping is a high-intensity activity that increases adrenaline
+                levels,
                 providing an instant boost of energy and excitement.
 
-                <em>2. Improves mental health: The rush of adrenaline and endorphins released during bungee jumping can
+                <em>2. Improves mental health: The rush of adrenaline and endorphins released during bungee jumping
+                    can
                     help
                     alleviate symptoms of depression and anxiety.</em>
 
-                3. Enhances self-confidence: Bungee jumping requires facing and overcoming fears, which can help build
+                3. Enhances self-confidence: Bungee jumping requires facing and overcoming fears, which can help
+                build
                 self-confidence and self-esteem.
             </p>
 
@@ -82,7 +85,8 @@
     </main>
     <aside>
         <h2>Health Requirements For Bungee Jumping</h2>
-        <p><strong>Keep in mind that bungee jumping is a physically demanding activity, so it's important to make sure
+        <p><strong>Keep in mind that bungee jumping is a physically demanding activity, so it's important to make
+                sure
                 you
                 are in good health and have consulted with a doctor before participating.</strong></p>
     </aside>
