--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <source srcset="images/hero-falls-800px.jpg" media="(min-width: 501px)">
         <source srcset="images/hero-falls-400px.jpg" media="(max-width: 500px)">
 
-        <img src="images/hero-falls-2000px.jpg" alt="bridge by large waterfall">
+        <img src="images/hero-falls-2000px.jpg" alt="a bridge by a large waterfall">
     </picture>
     <header>
         <nav>
